--- a/chatroomServer/pom.xml
+++ b/chatroomServer/pom.xml
@@ -19,6 +19,19 @@
 	</properties>
 
 	<dependencies>
+	
+		<dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-core</artifactId>
+    <version>6.0.0.Alpha2</version>
+    <type>pom</type>
+</dependency>
+			<dependency>
+			<groupId>com.oracle</groupId>
+			<artifactId>ojdbc8</artifactId>
+			<version>12.1.0</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
