--- a/chatroomServer/pom.xml
+++ b/chatroomServer/pom.xml
@@ -46,7 +46,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>5.4.3.Final</version>
+			<version>5.4.3.Final</version><!--$NO-MVN-MAN-VER$-->
 		</dependency>
 
 		<dependency>
@@ -57,7 +57,7 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-dbcp2</artifactId>
-			<version>2.6.0</version>
+			<version>2.6.0</version><!--$NO-MVN-MAN-VER$-->
 		</dependency>
 
 		<dependency>
