--- a/angular/package.json
+++ b/angular/package.json
@@ -1,31 +1,52 @@
 {
-  "name": "ae_chatroom",
-  "version": "1.0.0",
-  "description": "this new way to think about a chatroom for a simple class project",
-  "main": "index.js",
+  "name": "angular",
+  "version": "0.0.0",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/akilisosa/chatroomFrontend.git"
-  },
-  "keywords": [
-    "chatroom",
-    "akili",
-    "evan",
-    "team1"
-  ],
-  "author": "Akili Sosa, Evan Bradford",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/akilisosa/chatroomFrontend/issues"
-  },
-  "homepage": "https://github.com/akilisosa/chatroomFrontend#readme",
+  "private": true,
   "dependencies": {
+    "@angular/animations": "~7.2.0",
+    "@angular/common": "~7.2.0",
+    "@angular/compiler": "~7.2.0",
+    "@angular/core": "~7.2.0",
+    "@angular/forms": "~7.2.0",
+    "@angular/platform-browser": "~7.2.0",
+    "@angular/platform-browser-dynamic": "~7.2.0",
+    "@angular/router": "~7.2.0",
     "ajv": "^6.9.1",
     "bootstrap": "^4.3.1",
+    "core-js": "^2.5.4",
     "jquery": "^3.4.1",
-    "popper.js": "^1.14.7"
+    "popper.js": "^1.14.7",
+    "rxjs": "~6.3.3",
+    "tslib": "^1.9.0",
+    "zone.js": "~0.8.26"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~0.12.0",
+    "@angular/cli": "~7.2.3",
+    "@angular/compiler-cli": "~7.2.0",
+    "@angular/language-service": "~7.2.0",
+    "@types/jasmine": "~2.8.8",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "codelyzer": "~4.5.0",
+    "jasmine-core": "~2.99.1",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "^4.2.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~1.1.2",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "~5.4.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.11.0",
+    "typescript": "~3.2.2"
   }
 }
