--- a/chatroomServer/pom.xml
+++ b/chatroomServer/pom.xml
@@ -65,6 +65,20 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>2.9.2</version>
 		</dependency>
+		
+		<dependency>
+
+<groupId>com.oracle</groupId>
+
+<artifactId>ojdbc8</artifactId>
+
+<version>12.1.0</version>
+
+<scope>system</scope>
+
+<systemPath>${basedir}/lib/ojdbc8.jar</systemPath>
+
+</dependency>
 
 		
 
