--- a/chatroomServer/pom.xml
+++ b/chatroomServer/pom.xml
@@ -19,6 +19,22 @@
 	</properties>
 
 	<dependencies>
+	<dependency>
+           <groupId>com.google.code.gson</groupId>
+           <artifactId>gson</artifactId>
+           <version>2.8.5</version>
+       </dependency>
+       <dependency>
+
+<groupId>org.springframework.boot</groupId>
+
+<artifactId>spring-boot-devtools</artifactId>
+
+<scope>runtime</scope>
+
+<optional>true</optional>
+
+</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
