fixed the dao id theoretically

--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,9 @@ target/
 .sts4-cache
 
 ### angular ###
-/node_modules/
-angular/node_modules
+*/node_modules/
+/angular/node_modules/
+*/angular/node_modules
 */node_modules
 
 
